@@ -344,5 +344,29 @@ public class DataFrameAndDatasetDemo {
         demonstrateJoins(spark);
         demonstrateUDF(spark);
     }
+
+    /**
+     * 独立运行入口
+     */
+    public static void main(String[] args) {
+        SparkSession spark = SparkSession.builder()
+            .appName("DataFrame and Dataset Demo")
+            .config("spark.master", "local[*]")
+            .config("spark.driver.extraJavaOptions", 
+                "--add-exports java.base/sun.nio.ch=ALL-UNNAMED " +
+                "--add-opens java.base/java.lang=ALL-UNNAMED")
+            .config("spark.executor.extraJavaOptions",
+                "--add-exports java.base/sun.nio.ch=ALL-UNNAMED " +
+                "--add-opens java.base/java.lang=ALL-UNNAMED")
+            .getOrCreate();
+        
+        spark.sparkContext().setLogLevel("WARN");
+        
+        System.out.println("========== DataFrame/Dataset 演示开始 ==========");
+        runAllDemos(spark);
+        System.out.println("========== DataFrame/Dataset 演示完成 ==========");
+        
+        spark.stop();
+    }
 }
 
