@@ -341,5 +341,29 @@ public class DataIODemo {
         demonstrateFormatConversion(spark);
         demonstrateReadOptions(spark);
     }
+
+    /**
+     * 独立运行入口
+     */
+    public static void main(String[] args) {
+        SparkSession spark = SparkSession.builder()
+            .appName("Data I/O Demo")
+            .config("spark.master", "local[*]")
+            .config("spark.driver.extraJavaOptions", 
+                "--add-exports java.base/sun.nio.ch=ALL-UNNAMED " +
+                "--add-opens java.base/java.lang=ALL-UNNAMED")
+            .config("spark.executor.extraJavaOptions",
+                "--add-exports java.base/sun.nio.ch=ALL-UNNAMED " +
+                "--add-opens java.base/java.lang=ALL-UNNAMED")
+            .getOrCreate();
+        
+        spark.sparkContext().setLogLevel("WARN");
+        
+        System.out.println("========== 数据读写演示开始 ==========");
+        runAllDemos(spark);
+        System.out.println("========== 数据读写演示完成 ==========");
+        
+        spark.stop();
+    }
 }
 
